@@ -1,5 +1,5 @@
-# Copyright (C) 2003 by the gtk2-perl team (see the file AUTHORS for the full
-# list)
+# Copyright (C) 2003-2005 by the gtk2-perl team (see the file AUTHORS for
+# the full list)
 # 
 # This library is free software; you can redistribute it and/or modify it under
 # the terms of the GNU Library General Public License as published by the Free
@@ -92,5 +92,6 @@ newSVGParamFlags
 newSVGParamSpec
 newSVGSignalFlags
 newSVGSignalInvocationHint
+newSVGSignalQuery
 );
 1;
