@@ -52,6 +52,7 @@ t/c.t
 t/d.t
 t/e.t
 t/f.t
+t/signal_query.t
 TODO
 typemap
 xsapi.pod.foot
